RESOLVED FIXED61299
Terminating a WebProcess should work even while a page is being closed
https://bugs.webkit.org/show_bug.cgi?id=61299
Summary Terminating a WebProcess should work even while a page is being closed
Sam Weinig
Reported 2011-05-23 13:14:27 PDT
Terminating a WebProcess should work even while a page is being closed
Attachments
Patch (1.34 KB, patch)
2011-05-23 13:18 PDT, Sam Weinig
darin: review+
Sam Weinig
Comment 1 2011-05-23 13:18:29 PDT
Sam Weinig
Comment 2 2011-05-23 13:21:39 PDT
Note You need to log in before you can comment on or make changes to this bug.