2011-05-23  Sam Weinig  <sam@webkit.org>

Reviewed by Darin Adler.

        Terminating a WebProcess should work even while a page is being closed
        <rdar://problem/8934632>
        https://bugs.webkit.org/show_bug.cgi?id=61299

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::terminateProcess):
        Change validity check to only check for process validity, since terminating the process of a page that
        is closed or is closing is acceptable behavior.


Canonical link: https://commits.webkit.org/76675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87093 268f45cc-cd09-0410-ab3c-d52691b4dbfc